--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,39 @@
     <groupId>org.example</groupId>
     <artifactId>Jenkins_V2</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-surefire-provider</artifactId>
+                    <version>1.1.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>5.1.0</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+        </plugins>
+
+    </build>
 
 </project>
